fix: Hide scrollbar for overflow

--- a/client/stylesheets/styl/modules/_.styl
+++ b/client/stylesheets/styl/modules/_.styl
@@ -26,6 +26,8 @@
             flex-direction column
             overflow-x hidden
             overflow-y auto
+            &::-webkit-scrollbar
+                display none
             input
                 width 100%
             .load-more
